--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.10.1",
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.19",
+    "otp-generator": "^4.0.0",
+    "winston": "^3.8.1",
+    "winston-mongodb": "^5.0.7"
   }
 }
